--- a/jscode.html
+++ b/jscode.html
@@ -10,7 +10,7 @@
     <h1>RETURN TO MAIN PAGE</h1>
     <a class="ases" href="./index.html">Main Page <-- Click here to return</a>
     <h2>Check the code</h2>
-    <img src="./img/js1.png" alt="">
-    <img src="./img/js2.png" alt="">
+    <img src="./js1.png" alt="">
+    <img src="./js2.png" alt="">
 </body>
 </html>
